[gd_scene load_steps=4 format=3 uid="uid://ck07c5lmxex3t"]

[ext_resource type="Script" path="res://click_to_games.gd" id="1_qkd1r"]
[ext_resource type="Texture2D" uid="uid://clju1qxnho6o6" path="res://pictures /bg/Screenshot 2023-11-27 at 10.49.55 AM.png" id="2_t2ypb"]
[ext_resource type="FontFile" uid="uid://b074xph6ihn0x" path="res://assests (card faces)/font/Kenney Pixel Square.ttf" id="3_oxfks"]

[node name="Click_to_games" type="Node2D"]
script = ExtResource("1_qkd1r")

[node name="Screenshot2023-11-27At10_49_55Am" type="Sprite2D" parent="."]
position = Vector2(575.5, 324.5)
scale = Vector2(0.480384, 0.542642)
texture = ExtResource("2_t2ypb")

[node name="Game 1" type="Button" parent="."]
offset_left = 150.0
offset_top = 125.0
offset_right = 444.0
offset_bottom = 279.0
theme_override_fonts/font = ExtResource("3_oxfks")
theme_override_font_sizes/font_size = 40
text = "Game 1"

[node name="Game 2" type="Button" parent="."]
offset_left = 659.0
offset_top = 123.0
offset_right = 953.0
offset_bottom = 277.0
theme_override_fonts/font = ExtResource("3_oxfks")
theme_override_font_sizes/font_size = 40
text = "Game 2"

[node name="Game 3" type="Button" parent="."]
offset_left = 410.0
offset_top = 343.0
offset_right = 704.0
offset_bottom = 497.0
theme_override_fonts/font = ExtResource("3_oxfks")
theme_override_font_sizes/font_size = 40
text = "Matching
Game"

[node name="Return" type="Button" parent="."]
offset_left = 832.0
offset_top = 544.0
offset_right = 1130.0
offset_bottom = 624.0
theme_override_fonts/font = ExtResource("3_oxfks")
theme_override_font_sizes/font_size = 20
text = "Return to Home Screen"

[connection signal="pressed" from="Game 1" to="." method="_on_game_1_pressed"]
[connection signal="pressed" from="Game 2" to="." method="_on_game_2_pressed"]
[connection signal="pressed" from="Game 3" to="." method="_on_game_3_pressed"]
[connection signal="pressed" from="Return" to="." method="_on_return_pressed"]
